fix all spacings; automate featured card elements

--- a/src/assets/style/color.scss
+++ b/src/assets/style/color.scss
@@ -1,4 +1,5 @@
 /*
+ * color scheme based on home profile photo
  * $gray-green: #425350;
  * $lightest-blue: #d7f0f2;
  * $mid-blue: #98d3f2;
@@ -21,5 +22,5 @@ $redish: #e57373;
 $greenish: #558b2f;
 
 // vendor colors
-$figma-purple: rgb(62, 84, 163);
+$figma-purple: #3e54a3;
 $fcc-green: #00641f;
